RESOLVED FIXED14924
rotated rect with pattern draws incorrectly
https://bugs.webkit.org/show_bug.cgi?id=14924
Summary rotated rect with pattern draws incorrectly
John Daggett
Reported 2007-08-09 23:25:52 PDT
Rotated rect should draw four big dots with a small orange dot in the middle. However, with rotation applied the pattern is scaled and clipped. Renders correctly in Opera 9 or Batik 1.7, not in FF3 trunk.
Attachments
rotated pattern with webkit (6.22 KB, image/png)
2007-08-09 23:33 PDT, John Daggett
no flags
rotated pattern with opera 9 (8.70 KB, image/png)
2007-08-09 23:34 PDT, John Daggett
no flags
First attempt (36.40 KB, patch)
2007-08-17 00:07 PDT, Rob Buis
zimmermann: review+
John Daggett
Comment 1 2007-08-09 23:33:40 PDT
Created attachment 15893 [details] rotated pattern with webkit
John Daggett
Comment 2 2007-08-09 23:34:11 PDT
Created attachment 15894 [details] rotated pattern with opera 9
Mark Rowe (bdash)
Comment 3 2007-08-10 20:25:05 PDT
Confirmed with WebKit trunk. This may have been fixed on the feature branch.
Rob Buis
Comment 4 2007-08-16 10:55:45 PDT
Confirmed with feature branch.
Rob Buis
Comment 5 2007-08-17 00:07:25 PDT
Created attachment 16006 [details] First attempt Should work. Cheers, Rob.
Rob Buis
Comment 6 2007-08-20 11:33:25 PDT
Landed in r25155.
John Daggett
Comment 7 2007-08-26 18:32:25 PDT
Sorry, but this doesn't appear to be fixed in the latest nightlies. Tested r25168 on Windows, r25239 on Mac 10.4.10, both still render testcase incorrectly.
Matt Lilek
Comment 8 2007-08-26 18:42:31 PDT
(In reply to comment #7) > Sorry, but this doesn't appear to be fixed in the latest nightlies. Tested > r25168 on Windows, r25239 on Mac 10.4.10, both still render testcase > incorrectly. > This fix was committed only on the "feature-brach" branch where a lot of svg and other experimental work is being done right now while the trunk is locked down for stabilization. The nightlies are built from trunk so therefore you won't see any difference in the nightlies until that branch is merged to the trunk (no idea on when that might happen). There are currently no nightlies for feature-branch - the only way to get the improvements in it are to build that branch from source.
Note You need to log in before you can comment on or make changes to this bug.