        Reviewed by Nikolas.

http://bugs.webkit.org/show_bug.cgi?id=14924
        rotated rect with pattern draws incorrectly

        Use the bounding box before transformation.



Canonical link: https://commits.webkit.org/20431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26441 268f45cc-cd09-0410-ab3c-d52691b4dbfc