WebCore/platform/graphics/svg/cg/SVGPaintServerPatternCg.cpp
@@ -50,7 +50,7 @@ bool SVGPaintServerPattern::setup(GraphicsContext*& context, const RenderObject*
         IntRect textBoundary = const_cast<RenderObject*>(object)->absoluteBoundingBoxRect();
         targetRect = object->absoluteTransform().inverse().mapRect(textBoundary);
     } else
-        targetRect = CGContextGetPathBoundingBox(contextRef);
+        targetRect = object->relativeBBox(false);
 
     m_ownerElement->buildPattern(targetRect);
 
